ingress.yaml
# add the line 10.50.100.5 app.best-forum.com
# to /etc/hosts to work locally without proper DNS setup

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: best-forum-ingress      
  annotations: 
    cert-manager.io/issuer: "my-ca-issuer"   
spec:
  tls:
    - hosts:
      - best-forum.com  
      - app.best-forum.com  
      secretName: best-forum-tls
  rules:
    - host: app.best-forum.com             
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rest-lb                  
                port:
                  number: 443
    - host: best-forum.com             
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontendapp-lb                  
                port:
                  number: 443
